less/style.less
// common
html, body{
    height: 100%;
    font-size: @font-size-xs;
     @media (min-width: @screen-sm-min) {
                font-size: @font-size-base;
            }
    font-weight: 400;
}

.alt_font {
    // font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 1.1em;
    // font-weight: 400;
}


blockquote {
    border:none;
    padding-top: 100px;
    padding-left: 150px;
    padding-right: 150px;
}

blockquote:before {
    content: "\201C";
    font-size: 70px;
    display: block;
    float: left;
    margin-top: -70px;
    color: @esprova-red;
}
blockquote:after {
    content: "\201D";
    font-size: 70px;
    display: block;
    float: right;
    color: @esprova-red;

}

@media print {
  * { 
    text-shadow: none !important;
    // color: #000 !important; 
    background: transparent !important;
    box-shadow: none !important;
  }

  a, a:visited { text-decoration: underline; }
  a[href]:after { content: ""; }
  abbr[title]:after { content: " (" attr(title) ")"; }
  a[href^="javascript:"]:after,
  a[href^="#"]:after { content: ""; }
  dt { font-size:1.2em }
}

.messages {
    position: fixed;
    bottom: 50px;
    right: 50px;
    min-width: 30%;
    max-width: 40%;
    color: white;
    background: transparent url(../images/alert-notch.svg) no-repeat bottom right;
    opacity: 0.9;
    z-index: 1000;
    .alt_font();

    .alert{
        margin-top: 22px;
        background-color: @esprova-gray;
    }
}
    
.content {
    min-height: 100%;
    margin-top: -51px;
    padding-top: 81px;
    padding-bottom: 100px;
    margin-bottom: -45px;
}

.content:after {
  content: "";
  display: block;
}

.sport-selecter{
    text-align: center;
}


.nav {
    font-weight: 400;
}

// intro

.intro-navbar {
    background-color: @esprova-red;
    color:white !important;
    line-height: 51px;
    .nav {
        // width: 100%;
        margin: 0;
    }
    a {
        color: white;
         background-color: transparent!important;
    }

    // .nav .open>a:focus, .nav .open>a:hover {
    //     background-color: transparent;
    // }

    * > img {
        height: 20px;
        margin-left: 10px;
    }
}

.intropage {
    // background-color: @esprova-red;
    // color:white;

    .banner {
        height: 400px;
        text-align: center;
        background: url(../images/intro-banner.jpg) no-repeat center;
        background-size: cover; 
        margin-top: -81px;
        padding-top: 80px;
        width: 100%;

        .typogram {
            width: 50%;
            margin: auto;
            >img {
                width: 100%;
            }
        }

        .baseline {
            font-size: 1.4em;
            color: white;
            width: 70%;
            margin-right: auto;
            margin-left: auto;
            margin-top: 40px;


            @media (min-width: @screen-sm-min) {
                font-size: 2.3em;
            }
        }
    }

    .search-command {
        background-color: @esprova-red;
        color: white;
        padding: 50px 30px 50px 30px;
        margin-right: -15px;
        margin-left: -15px;
    }

    .intro-spacer {
        background-color: @esprova-red;
        height: 1px;
        margin: 60px -15px;
    }

    .informations {
        padding: 40px 0 50px 0;
        color: @esprova-darkgray;

        .about {
            text-align: center;

            .about-title {
                font-weight: 600;
                margin-bottom: 50px;
                font-size: 2.8em;
                // letter-spacing: 0.15em;

                @media (min-width: @screen-sm-min) and  (max-width: @screen-sm-max) {
                    font-size: 2.2em;
                }
            }


            .about-icon {
                margin-top: 50px;
                margin-bottom: 50px;
                height: 100px;
            }

            .about-text {
                .alt_font ();
                text-align: left;
                padding: 0 20px 0 20px;
                margin-bottom: 50px;
            }
        }
        .more-info {
            // padding: 150px 0 0 0;
            position: relative;

            .more-info-icon {
                padding: 0;
                height: 200px;
                line-height: 200px;
                text-align: center;
                margin-bottom: 30px;

                > img {
                    height: 150px;

                }

                // used to center vertically on large devices
                @media (min-width: @screen-sm-min) {
                    position:absolute;
                    top: 50%;
                    transform: translateY(-50%);
                    -ms-transform: translateY(-50%); /* IE 9 */
                    -webkit-transform: translateY(-50%); /* Safari */
                    margin-bottom: 0px;
                }
        
            }

            .more-info-text {
                padding: 0 30px 0 30px;
                text-align: left;

                .title {
                    font-size: 2em;
                    margin-bottom: 50px;
                    text-align: center;
                    font-weight: 600;
                }

                .text {
                    .alt_font ();
                    margin-bottom: 30px;
                }


            }
        }
    }

    

}
/* ... */

